--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="operazioni">
                 <button class="button" onclick="orario()">Che ora è?</button>
-                <button class="button" id="tobac">Posizione bellaaaasa</button>
+                <button class="button" id="tobac">Posizione</button>
         </div>
 
         
