--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <audio src="./audio/bruh.mp3" id="bruh"></audio>
             </button>
                 <button class="button" onclick="mac()">
-                    Mac
+                    Helicopter
                     <audio src="./audio/helicopter.mp3" id="mac" class=""></audio>
                 </button>
         </div>
