--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <div class="main-div">
         <h3>WRITE<br>YOUR<br>NUMBERS</h3>
-        <input type="number" id="n1" placeholder="number 1..." value="">
-        <input type="number" id="n2" placeholder="number 2..." value="">
+        <input type="number" id="n1" placeholder="number 1..." value="0">
+        <input type="number" id="n2" placeholder="number 2..." value="0">
         
         <div class="operazioni">
             <button class="button" onclick="somma()">Somma</button>
