--- a/home/home.html
+++ b/home/home.html
@@ -47,14 +47,14 @@
                 </div>
                 <div class="p-box">
                     <div class="button"><a href="">Tris</a></div>
-                <div class="button"><a href="">Calendario</a></div>
+                <div class="button" onclick="contacts()"><a href="">Contatti</a></div>
                 </div>
             </div>
         </div>
         
     </div>
 
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js" integrity="sha512-gWlyRVDsJvp5kesJt4cSdPPLZIBdln/uSwzYgUicQcbTgRNQE4QhP5KUBIYlLYLkiKIQiuD7KUMHzqGNW/D2bQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/home/home.js"></script>
 </body>
