--- a/easy/easycalc.html
+++ b/easy/easycalc.html
@@ -17,7 +17,7 @@
 <body>
     <div class="butt">
         <div class="di">
-            <button  class="logbtn"><a href="/home/home.html">👑 Home 👑</a></button>
+            <button  class="logbtn"><a href="/home.html">👑 Home 👑</a></button>
         </div>
         <div class="webCounter">
             <div class="website-counter"></div>
