--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Style's link -->
-    <link rel="stylesheet" href="/home/home.css">
+    <link rel="stylesheet" href="/home.css">
 
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,13 +33,13 @@
         </div>
         <div class="body-main">
             <div class="animation">
-                <img src="/home/img/benvenuto.svg" class="home-img" alt="">
+                <img src="/img/benvenuto.svg" class="home-img" alt="">
             </div>
             <div class="projects-list">
                 <div class="title"><h1>MY PROJECTS:</h1></div>
                 <div class="p-box">
                     <div class="button"><a href="">Orologio</a></div>
-                <div class="button"><a href="/easy/easycalc.html">Easy Calc</a></div>
+                <div class="button"><a href="/easycalc.html">Easy Calc</a></div>
                 </div>
                 <div class="p-box">
                     <div class="button"><a href="">ToDo</a></div>
@@ -57,6 +57,6 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js" integrity="sha512-gWlyRVDsJvp5kesJt4cSdPPLZIBdln/uSwzYgUicQcbTgRNQE4QhP5KUBIYlLYLkiKIQiuD7KUMHzqGNW/D2bQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/home/home.js"></script>
+    <script src="/home.js"></script>
 </body>
 </html>
