--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
                 <div class="title"><h1>MY PROJECTS:</h1></div>
                 <div class="p-box">
                     <div class="button"><a href="">Orologio</a></div>
-                <div class="button"><a href="/easycalc.html">Easy Calc</a></div>
+                <div class="button"><a href="/easy/easycalc.html">Easy Calc</a></div>
                 </div>
                 <div class="p-box">
                     <div class="button"><a href="">ToDo</a></div>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="p-box">
                     <div class="button"><a href="">Tris</a></div>
-                <div class="button"><a href="" onclick="contacts()">Contatti</a></div>
+                <div class="button"><a href="" class="button" onclick="contact()">Contatti</a></div>
                 </div>
             </div>
         </div>
