--- a/home.html
+++ b/home.html
@@ -38,16 +38,18 @@
             <div class="projects-list">
                 <div class="title"><h1>MY PROJECTS:</h1></div>
                 <div class="p-box">
-                    <div class="button"><a href="">Orologio</a></div>
-                <div class="button"><a href="/easy/easycalc.html">Easy Calc</a></div>
+                    <button class="button" onclick="contact()"><a href="">Orologio</a></button>
+                    <button class="button" onclick=""><a href="/easy/easycalc.html">EasyCalc</a></button>
                 </div>
                 <div class="p-box">
-                    <div class="button"><a href="">ToDo</a></div>
+                    <button class="button" onclick="contact()"><a href="">ToDo</a></button>
                 <div class="button"><a href="">Tetris</a></div>
                 </div>
                 <div class="p-box">
-                    <div class="button"><a href="">Tris</a></div>
-                <div class="button"><a href="" class="button" onclick="contact()">Contatti</a></div>
+                    <button class="button" onclick="contact()"><a href="">Tris</a></button>
+                    <button class="button" onclick="contact()">Contatti</button>
+                </div>
+                <div class="p-box">
                 </div>
             </div>
         </div>
@@ -55,8 +57,7 @@
     </div>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js" integrity="sha512-gWlyRVDsJvp5kesJt4cSdPPLZIBdln/uSwzYgUicQcbTgRNQE4QhP5KUBIYlLYLkiKIQiuD7KUMHzqGNW/D2bQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/home.js"></script>
 </body>
-</html>
+</html> 
