fix sovrapposizione immagine

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
             <div class="projects-list">
                 <div class="title"><h1>MY PROJECTS:</h1></div>
                 <div class="p-box">
-                    <button class="button" onclick="contact()"><a href="">Orologio</a></button>
+                    <button class="button" onclick="orologio()"><a href="">Orologio</a></button>
                     <button class="button" onclick=""><a href="/easy/easycalc.html">EasyCalc</a></button>
                 </div>
                 <div class="p-box">
