fix width svg home

--- a/home.html
+++ b/home.html
@@ -42,11 +42,11 @@
                     <button class="button" onclick=""><a href="/easy/easycalc.html">EasyCalc</a></button>
                 </div>
                 <div class="p-box">
-                    <button class="button" onclick="contact()"><a href="">ToDo</a></button>
+                    <button class="button" onclick=""><a href="">ToDo</a></button>
                 <div class="button"><a href="">Tetris</a></div>
                 </div>
                 <div class="p-box">
-                    <button class="button" onclick="contact()"><a href="">Tris</a></button>
+                    <button class="button" onclick=""><a href="">Tris</a></button>
                     <button class="button" onclick="contact()">Contatti</button>
                 </div>
                 <div class="p-box">
