--- a/easy/easycalc.html
+++ b/easy/easycalc.html
@@ -42,9 +42,9 @@
                 Bruh
               <audio src="./audio/bruh.mp3" id="bruh"></audio> 
             </button>
-                <button class="button" onclick="mac()">
+                <button class="button" onclick="" id="elibtn">
                     Helicopter
-                   <audio src="./audio/helicopter.mp3" id="mac" class=""></audio>
+                   <audio src="./audio/helicopter.mp3" id="eli" class=""></audio>
                 </button>
         </div>
         <div class="operazioni">
