--- a/easy/easycalc.html
+++ b/easy/easycalc.html
@@ -38,9 +38,9 @@
             <button class="button" onclick="divisione()">Dividi</button>
         </div>
         <div class="operazioni">
-            <button class="button" onclick="bruh()">
+            <button class="button" id="brubtn">
                 Bruh
-              <audio src="./audio/bruh.mp3" id="bruh"></audio> 
+              <audio src="./audio/bruh.mp3" id="bru"></audio> 
             </button>
                 <button class="button" onclick="" id="elibtn">
                     Helicopter
