--- a/html/clock.html
+++ b/html/clock.html
@@ -9,14 +9,15 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet"> 
     <title>Orologio</title>
 </head>
 <body>
     
-    <div class="orologio" id="clock"></div>
-
-
+    <div class="main">
+        <div class="orologio" id="clock"></div>
+        <div class="calendario" id="cal"></div>
+    </div>
 
     <script src="/js/clock.js"></script>
 </body>
