--- a/html/clock.html
+++ b/html/clock.html
@@ -22,7 +22,7 @@
         <div class="orologio" id="clock"></div>
         <div class="calendario" id="cal"></div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js" integrity="sha512-gWlyRVDsJvp5kesJt4cSdPPLZIBdln/uSwzYgUicQcbTgRNQE4QhP5KUBIYlLYLkiKIQiuD7KUMHzqGNW/D2bQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/clock.js"></script>
 </body>
 </html>
