--- a/html/easycalc.html
+++ b/html/easycalc.html
@@ -47,10 +47,10 @@
                    <audio src="/audio/helicopter.mp3" id="eli" class=""></audio>
                 </button>
         </div>
-        <div class="operazioni">
+         <!--<div class="operazioni">
                 <button class="button" onclick="orario()">Che ora è?</button>
                 <button class="button" id="tobac">Posizione</button>
-        </div>
+        </div>-->
         
 
         <footer>Created by Mattia Valerio</footer>
