--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </div>
             <div class="nav-link">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">Projects</a></li>
-                    <li><a href="">Contatti</a></li>
+                    <li onclick="contact()"><a >Contatti</a></li>
                 </ul>
             </div>
         </div>
@@ -39,7 +39,7 @@
                     <button class="button" onclick=""><a href="/html/easycalc.html">EasyCalc</a></button>
                 </div>
                 <div class="p-box">
-                    <button class="button" onclick=""><a href="">ToDo</a></button>
+                    <button class="button" onclick=""><a href="/html/todo.html">ToDo</a></button>
                 <div class="button"><a href="">Tetris</a></div>
                 </div>
                 <div class="p-box">
