--- a/html/todo.html
+++ b/html/todo.html
@@ -17,19 +17,17 @@
 
     <div class="main">
         <div class="home">
-            <button>HOME</button>
+            <button class="homebtn" href><a href="/index.html">HOME</a></button>
         </div>
         <div class="todo">
-
             <div id="myDIV" class="header">
-                <h2>My To Do List</h2>
+                <h2>ToDo List :</h2>
                 <input type="text" id="myInput" placeholder="Titolo...">
-                <span onclick="newElement()" class="addBtn" id="btnn">Add</span>
+                <span onclick="newElement()" class="addBtn" id="btnn">+</span>
               </div>
               
-              <ul id="myUL">
+              <ul id="myUL" class="addUL">
               </ul> 
-
         </div>
     </div>
     
