--- a/html/todo.html
+++ b/html/todo.html
@@ -22,8 +22,10 @@
         <div class="todo">
             <div id="myDIV" class="header">
                 <h2>ToDo List :</h2>
-                <input type="text" id="myInput" placeholder="Titolo...">
-                <span onclick="newElement()" class="addBtn" id="btnn">+</span>
+                <div class="inn">
+                    <input type="text" id="myInput" placeholder="Titolo...">
+                    <span onclick="newElement()" class="addBtn" id="btnn">+</span>
+                </div>
               </div>
               
               <ul id="myUL" class="addUL">
