--- a/html/clock.html
+++ b/html/clock.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/clock.css">
+    <link rel="stylesheet" href="/style/main.css">
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,13 +17,15 @@
     <title>Orologio</title>
 </head>
 <body>
-    
+    <div class="transition transition-1 is-active"></div>
     <div class="main">
-        <button  class="homebtn"><a href="/index.html">👑 Home 👑</a></button>
+        <button href="/index.html" class="homebtn"><a href="index.html">👑 Home 👑</a></button>
         <div class="orologio" id="clock"></div>
         <div class="calendario" id="cal"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js" integrity="sha512-gWlyRVDsJvp5kesJt4cSdPPLZIBdln/uSwzYgUicQcbTgRNQE4QhP5KUBIYlLYLkiKIQiuD7KUMHzqGNW/D2bQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/clock.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
+#071633
