--- a/html/easycalc.html
+++ b/html/easycalc.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/style/easycalc.css">
+    <link rel="stylesheet" href="/style/main.css">
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,6 +60,7 @@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/easycalc.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
 <!--MattiaValerio-->
