--- a/html/todo.html
+++ b/html/todo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/todo.css">
+    <link rel="stylesheet" href="/style/main.css">
 
         <!--Google Fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,7 @@
 
     <div class="main">
         <div class="home">
-            <button class="homebtn" href><a href="/index.html">HOME</a></button>
+            <button class="homebtn" href><a href="/index.html">👑 Home 👑</a></button>
         </div>
         <div class="todo">
             <div id="myDIV" class="header">
@@ -36,5 +37,6 @@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/todo.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
