--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!--Style's link -->
     <link rel="stylesheet" href="/style/home.css">
+    <link rel="stylesheet" href="/style/main.css">
 
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +16,7 @@
     <title>Home</title>
 </head>
 <body>
+    <div class="transition transition-1 is-active"></div>
     <div class="main">
         <div class="nav-main">
             <div class="logo">
@@ -56,5 +58,6 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.0/gsap.min.js" integrity="sha512-gWlyRVDsJvp5kesJt4cSdPPLZIBdln/uSwzYgUicQcbTgRNQE4QhP5KUBIYlLYLkiKIQiuD7KUMHzqGNW/D2bQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/home.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html> 
