remove page animation

--- a/html/clock.html
+++ b/html/clock.html
@@ -17,9 +17,9 @@
     <title>Orologio</title>
 </head>
 <body>
-    <div class="transition transition-1 is-active"></div>
+    <!--<div class="transition transition-1 is-active"></div>-->
     <div class="main">
-        <button href="/index.html" class="homebtn"><a href="index.html">👑 Home 👑</a></button>
+        <button class="homebtn"><a href="index.html">👑 Home 👑</a></button>
         <div class="orologio" id="clock"></div>
         <div class="calendario" id="cal"></div>
     </div>
@@ -28,4 +28,3 @@
     <script src="/js/main.js"></script>
 </body>
 </html>
-#071633
