--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="transition transition-1 is-active"></div>
+    <!--<div class="transition transition-1 is-active"></div>-->
     <div class="main">
         <div class="nav-main">
             <div class="logo">
