new year count down

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="p-box">
                     <button class="button" onclick=""><a href="/html/todo.html">ToDo</a></button>
-                <div class="button"><a href="">Tetris</a></div>
+                <div class="button"><a href="/html/cd.html">CountDown</a></div>
                 </div>
                 <div class="p-box">
                     <button class="button" onclick=""><a href="">Tris</a></button>
