--- a/html/cd.html
+++ b/html/cd.html
@@ -15,10 +15,12 @@
 <body>
     
     <div class="main">
-        <img src="" alt="">
-
+        <div class="home">
+            <div class="button">
+                <button><a href="../index.html">👑 Home 👑</a></button>
+            </div>
+        </div>
         <div class="cd">
-            
             <div class="text">
                 <div class="d">
                     <h1 id="d">0</h1>
