--- a/html/clock.html
+++ b/html/clock.html
@@ -19,7 +19,7 @@
 <body>
     <!--<div class="transition transition-1 is-active"></div>-->
     <div class="main">
-        <button class="homebtn"><a href="index.html">👑 Home 👑</a></button>
+        <button class="homebtn"><a href="../index.html">👑 Home 👑</a></button>
         <div class="orologio" id="clock"></div>
         <div class="calendario" id="cal"></div>
     </div>
